package com.jue.framework.view;

import android.content.Context;
import android.util.AttributeSet;

import cn.jzvd.JzvdStd;

/**
 * FileName: VideoJzvdStd
 * Founder: Jue
 * Profile: 视频播放器
 */
public class VideoJzvdStd extends JzvdStd {

    public VideoJzvdStd(Context context) {
        super(context);
    }

    public VideoJzvdStd(Context context, AttributeSet attrs) {
        super(context, attrs);
    }

}
