@startuml

title __VIEW's Class Diagram__\n

  namespace com.jue.framework {
    namespace view {
      class com.jue.framework.view.DialogView {
          + DialogView()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace view {
      class com.jue.framework.view.HeadZoomScrollView {
          - firstPosition : float
          - isScrolling : boolean
          - mReplyRate : float
          - mScrollRate : float
          - mZoomView : View
          - mZoomViewHeight : int
          - mZoomViewWidth : int
          + HeadZoomScrollView()
          + HeadZoomScrollView()
          + HeadZoomScrollView()
          + dispatchTouchEvent()
          # onFinishInflate()
          - replyZoomView()
          - setZoomView()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace view {
      class com.jue.framework.view.LodingView {
          - iv_loding : ImageView
          - mAnim : ObjectAnimator
          - tv_loding_text : TextView
          + LodingView()
          + hide()
          + setCancelable()
          + setLodingText()
          + show()
          + show()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace view {
      class com.jue.framework.view.TouchPictureV {
          - CARD_SIZE : int
          - LINE_H : int
          - LINE_W : int
          - bgBitmap : Bitmap
          - errorValues : int
          - mHeight : int
          - mMoveBitmap : Bitmap
          - mNullBitmap : Bitmap
          - mPaintMove : Paint
          - mPaintNull : Paint
          - mPaintbg : Paint
          - mWidth : int
          - moveX : int
          + TouchPictureV()
          + TouchPictureV()
          + TouchPictureV()
          + onTouchEvent()
          + setViewResultListener()
          # onDraw()
          # onSizeChanged()
          - drawBg()
          - drawMoveCard()
          - drawNullCard()
          - init()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace view {
      interface com.jue.framework.view.TouchPictureV.OnViewResultListener {
          {abstract} + onResult()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace view {
      class com.jue.framework.view.VideoJzvdStd {
          + VideoJzvdStd()
          + VideoJzvdStd()
      }
    }
  }
  

  com.jue.framework.view.DialogView -up-|> android.app.Dialog
  com.jue.framework.view.HeadZoomScrollView -up-|> android.widget.ScrollView
  com.jue.framework.view.LodingView o-- com.jue.framework.view.DialogView : mLodingView
  com.jue.framework.view.TouchPictureV -up-|> android.view.View
  com.jue.framework.view.TouchPictureV o-- com.jue.framework.view.TouchPictureV.OnViewResultListener : viewResultListener
  com.jue.framework.view.TouchPictureV +-down- com.jue.framework.view.TouchPictureV.OnViewResultListener
  com.jue.framework.view.VideoJzvdStd -up-|> cn.jzvd.JzvdStd


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
